# KadiStudio

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTOR.md  README.md  build.sh  configure.txt
lib/properties/: .gitlab-ci.yml  CMakeLists.txt  README.md  globals.h  makefile  sides.h
lib/properties/data/: ambassador.cpp  ambassador.h  colormap.c  colormap.h  keytype.c  keytype.h  mem.h  properties.h  propertiesmodel.cpp  propertiesmodel.h  property.cpp  property.h  propertyfactory.cpp  propertyfactory.h  validator.h  valuetypeinterfacehint.cpp  valuetypeinterfacehint.h  wrapper.h
lib/properties/data/properties/: delegateproperty.h  functionproperty.h  linkedproperty.cpp  linkedproperty.h  propertychangelistener.h  propertyvti.h
lib/properties/data/valuetypeinterface/: abstractvaluetypeinterface.cpp  abstractvaluetypeinterface.h  arrayvaluetype.h  customdelimitermixin.h  dynamicvaluetype.h  elementtypeinterface.h  mapvaluetype.h  matrixvaluetype.h  valuetypeinterface.h  valuetypeinterfacecontainer.h  valuetypeinterfaceiterator.h  vectorvaluetype.h
lib/properties/test/: makefile  propertiestest.cpp  propertiestest.h  sizeinfo.cpp  sizeinfo.h  test.cpp
lib/properties/ui/factory/: propertypanel.cpp  propertypanel.h  propertywidget.h  propertywidgetfactory.cpp  propertywidgetfactory.h  vtiwidget.cpp  vtiwidget.h
lib/properties/utils/: defaults.h  eventbus.h  slot.h  traits.h
plugins/: CMakeLists.txt
plugins/application/: CMakeLists.txt
plugins/application/logger/: CMakeLists.txt  loggerplugin.cpp  loggerplugin.h
plugins/application/testplugin/: CMakeLists.txt  testplugin.cpp  testplugin.h  testplugin.qrc  testplugincommandlineparser.h
plugins/application/toolstarter/: CMakeLists.txt  toolstarter.qrc  toolstarterplugin.cpp  toolstarterplugin.h
plugins/application/workfloweditor/: CMakeLists.txt  WorkFlowGraphModel.cpp  WorkFlowGraphModel.h  autolayout.cpp  autolayout.h  config.h  kadistudio-workfloweditor.desktop  workfloweditor.cpp  workfloweditor.h  workfloweditor.qrc  workfloweditorinterface.h  workfloweditorplugin.cpp  workfloweditorplugin.h  workflowscene.cpp  workflowscene.h  workflowview.cpp  workflowview.h
plugins/application/workflowexecution/: CMakeLists.txt  WorkflowExecution.cpp  WorkflowExecution.h  WorkflowExecutionDelegate.cpp  WorkflowExecutionDelegate.h  workflowexecutioninterface.h  workflowexecutionplugin.cpp  workflowexecutionplugin.h
plugins/application/workflowinteraction/: CMakeLists.txt  WorkflowInteraction.cpp  WorkflowInteraction.h  WorkflowInteractionDelegate.cpp  WorkflowInteractionDelegate.h  WorkflowInteractionInterface.h  WorkflowInteractionPlugin.cpp  WorkflowInteractionPlugin.h  kadistudio-workflowinteraction.desktop  workflowinteraction.qrc
plugins/infrastructure/: CMakeLists.txt
plugins/infrastructure/kadiconfig/: CMakeLists.txt  kadiconfig.qrc  kadiconfiginterface.h  kadiconfigplugin.cpp  kadiconfigplugin.h  kadiinstance.h
plugins/infrastructure/kadiintegration/: CMakeLists.txt  createnewrecorddialoginterface.h  downloadfromkadidialoginterface.h  kadiintegration.qrc  kadiintegrationinterface.h  kadiintegrationplugin.cpp  kadiintegrationplugin.h  uploadtokadidialoginterface.h
plugins/infrastructure/menupluginchooser/: CMakeLists.txt  menupluginchooserinterface.h  menupluginchooserplugin.cpp  menupluginchooserplugin.h
plugins/infrastructure/propertyformwidget/: CMakeLists.txt  propertyformwidgetinterface.h  propertyformwidgetplugin.cpp  propertyformwidgetplugin.h
plugins/infrastructure/qpropertywidgetfactory/: CMakeLists.txt  qpropertywidget.cpp  qpropertywidget.h  qpropertywidgetfactoryplugin.cpp  qpropertywidgetfactoryplugin.h  qvtiwidget.cpp  qvtiwidget.h  qwidgetinterface.h  userinteractioneventfilter.cpp  userinteractioneventfilter.h  widgetfactoryinterface.h
plugins/infrastructure/settings/: CMakeLists.txt  settings.qrc  settingsdelegate.cpp  settingsdelegate.h  settingsinterface.h  settingsplugin.cpp  settingsplugin.h
plugins/infrastructure/toolchooser/: CMakeLists.txt  toolchooserinterface.h  toolchooserplugin.cpp  toolchooserplugin.h  tooldescriptioninterface.h
plugins/infrastructure/widgetdialog/: CMakeLists.txt  editdialog.cpp  editdialog.h  editdialoginterface.h  resources_icons.qrc
src/framework/: CMakeLists.txt  framework.qrc
src/framework/commandlineparser/: CMakeLists.txt  commandlineparser.cpp  commandlineparser.h  commandlineparserapplicationinterface.h  mem.h  parameter.c  parameter.h  parse.c  parse.h  qsort.h  stringconv.c  stringconv.h  structures.h  validator.c  validator.h  variant.c  variant.h  wrapper.c  wrapper.h
src/framework/dock/: CMakeLists.txt  dockdelegate.cpp  dockdelegate.h  dockinterface.h  dockwindow.cpp  dockwindow.h
src/framework/enhanced/: CMakeLists.txt  coloredterminalwidget.cpp  coloredterminalwidget.h  qbucketprogressbar.cpp  qbucketprogressbar.h  qlineedit_withunitlabel.cpp  qlineedit_withunitlabel.h  qlineeditclearable.cpp  qlineeditclearable.h  recentfiles.cpp  recentfiles.h
src/framework/mainwindow/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  helpdialog.cpp  helpdialog.h  mainwindow.cpp  mainwindow.h
src/framework/menu/: CMakeLists.txt  menudelegate.cpp  menudelegate.h  menuinterface.h
src/framework/pluginframework/: CMakeLists.txt  interfacecontainer.h  pluginclientinterface.h  plugindependencyloader.cpp  plugindependencyloader.h  plugininterface.h  plugininterfacemacros.h  pluginmanager.cpp  pluginmanager.h  pluginmanagerinterface.h  plugins.cpp  plugins.h
src/framework/statusbar/: CMakeLists.txt  statusbardelegate.cpp  statusbardelegate.h  statusbarinterface.h
src/framework/tab/: CMakeLists.txt  tabdelegate.cpp  tabdelegate.h  tabinterface.h
src/framework/workspace/: CMakeLists.txt  workspace.cpp  workspace.h
src/main/: CMakeLists.txt  application.cpp  application.h  kadistudio.cpp
test/: CMakeLists.txt  test_logger.h  test_plugins.h  test_tooldialog.cpp  test_tooldialog.h
test/test_tooldialog/: test_tooldialog_choosetool.cpp  test_tooldialog_choosetool.h  test_tooldialog_settings.cpp  test_tooldialog_settings.h
(+364 files in other folders)
